# fib-performance

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO.md  cmake_install.cmake  test_map
data/: load.txt  load_one.txt  load_tmp_2557_1.txt  load_tmp_639_1.txt  middle.txt  single.txt  small.txt  test.txt  test_one.txt  test_tmp_639_1.txt
output/: caesar-filter_2_16_2557_1_out.txt  caesar-filter_2_16_31967_1_out.txt  caesar-filter_2_16_31967_2_out.txt  caesar-filter_2_16_31967_3_out.txt  caesar-filter_2_16_31967_4_out.txt  caesar-filter_2_16_31967_5_out.txt  caesar-filter_2_16_31967_6_out.txt  caesar-filter_2_16_31967_7_out.txt  caesar-filter_2_16_31967_8_out.txt  caesar-filter_2_16_3836_1_out.txt  caesar-filter_2_16_5114_1_out.txt  caesar-filter_2_16_6393_10_out.txt  caesar-filter_2_16_6393_11_out.txt  caesar-filter_2_16_6393_12_out.txt  caesar-filter_2_16_6393_13_out.txt  caesar-filter_2_16_6393_14_out.txt  caesar-filter_2_16_6393_15_out.txt  caesar-filter_2_16_6393_16_out.txt  caesar-filter_2_16_6393_17_out.txt  caesar-filter_2_16_6393_18_out.txt  caesar-filter_2_16_6393_19_out.txt  caesar-filter_2_16_6393_1_out.txt  caesar-filter_2_16_6393_20_out.txt  caesar-filter_2_16_6393_2_out.txt  caesar-filter_2_16_6393_3_out.txt  caesar-filter_2_16_6393_4_out.txt  caesar-filter_2_16_6393_5_out.txt  caesar-filter_2_16_6393_6_out.txt  caesar-filter_2_16_6393_7_out.txt  caesar-filter_2_16_6393_8_out.txt  caesar-filter_2_16_6393_9_out.txt  caesar-filter_2_16_639_1_out.txt  caesar-filter_2_32_2557_1_out.txt  caesar-filter_2_32_31967_1_out.txt  caesar-filter_2_32_31967_2_out.txt  caesar-filter_2_32_31967_3_out.txt  caesar-filter_2_32_31967_4_out.txt  caesar-filter_2_32_31967_5_out.txt  caesar-filter_2_32_31967_6_out.txt  caesar-filter_2_32_31967_7_out.txt  (+2520 more)
output/old/: caesar-filter_2_16_1278_1_out.txt  caesar-filter_2_16_1918_1_out.txt  caesar-filter_2_16_3196_1_out.txt  caesar-filter_2_16_4475_1_out.txt  caesar-filter_2_16_5754_1_out.txt  caesar-filter_2_16_6393_1_out.txt  caesar-filter_2_32_1278_1_out.txt  caesar-filter_2_32_1918_1_out.txt  caesar-filter_2_32_3196_1_out.txt  caesar-filter_2_32_3836_1_out.txt  caesar-filter_2_32_5114_1_out.txt  caesar-filter_2_4_1278_1_out.txt  caesar-filter_2_4_2557_1_out.txt  caesar-filter_2_4_3836_1_out.txt  caesar-filter_2_8_1918_1_out.txt  caesar-filter_2_8_3196_1_out.txt  caesar-filter_2_8_4475_1_out.txt  caesar-filter_2_8_5754_1_out.txt  caesar-filter_3_16_2557_1_out.txt  caesar-filter_3_16_3836_1_out.txt  caesar-filter_3_16_4475_1_out.txt  caesar-filter_3_32_1918_1_out.txt  caesar-filter_3_32_3196_1_out.txt  caesar-filter_3_32_4475_1_out.txt  caesar-filter_3_32_5754_1_out.txt  caesar-filter_3_32_6393_1_out.txt  caesar-filter_3_4_3196_1_out.txt  caesar-filter_3_4_3836_1_out.txt  caesar-filter_3_4_4475_1_out.txt  caesar-filter_3_4_639_1_out.txt  caesar-filter_3_8_2557_1_out.txt  caesar-filter_3_8_3836_1_out.txt  caesar-filter_3_8_4475_1_out.txt  caesar-filter_4_16_1278_1_out.txt  caesar-filter_4_16_4475_1_out.txt  caesar-filter_4_16_5754_1_out.txt  caesar-filter_4_32_3836_1_out.txt  caesar-filter_4_32_5754_1_out.txt  caesar-filter_4_32_6393_1_out.txt  caesar-filter_4_4_3836_1_out.txt  (+709 more)
output/raptor/: caesar-filter_2_16_639_1_out.txt  caesar-filter_2_32_639_1_out.txt  caesar-filter_2_4_639_1_out.txt  caesar-filter_2_8_639_1_out.txt  caesar-filter_3_16_639_1_out.txt  caesar-filter_3_32_639_1_out.txt  caesar-filter_3_4_639_1_out.txt  caesar-filter_3_8_639_1_out.txt  (+155 more)
refs/: papers.txt
scripts/: .RData  .Rhistory  attack.rb  attack_plotter.py  attack_plotter.r  blacklist-to-names.sh  caesar-filter_out.txt  caesar_out.txt  cisco_out.txt  experiment.rb  generator.py  naive_out.txt  plotter.py  runner.rb  test.txt  url-to-name.py
src/: FIBMap.c  FIBMap.h  bitmap.c  bitmap.h  bloom.c  bloom.h  fib-perf.c  fib.c  fib.h  fib_caesar.c  fib_caesar.h  fib_caesar_filter.c  fib_caesar_filter.h  fib_cisco.c  fib_cisco.h  fib_merged_filter.c  fib_merged_filter.h  fib_naive.c  fib_naive.h  fib_patricia.c  fib_patricia.h  fib_perf.c  fib_tbf.c  fib_tbf.h  hasher.c  hasher.h  map.c  map.h  merged_bloom.c  merged_bloom.h  name.c  name.h  name_reader.c  name_reader.h  patricia.c  patricia.h  prefix_bloom.c  prefix_bloom.h  random.c  random.h  (+7 more)
(+82 files in other folders)
